--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:showIn="@layout/activity_main">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_img_icon"
@@ -18,7 +22,6 @@
         app:civ_circle_background_color="@color/gray_border"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="wrap_content"
@@ -118,24 +121,24 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/profile_nav_tabs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/top_bottom_border"
-        android:layout_marginTop="8dp"
+        app:menu="@menu/menu_profile_bottom_nav"
         app:labelVisibilityMode="unlabeled"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile_txt_bio"
-        app:menu="@menu/menu_profile_bottom_nav" />
+        android:layout_marginTop="8dp"
+        android:background="@drawable/top_bottom_border"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/profile_rv"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/profile_nav_tabs"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
         tools:listitem="@layout/item_profile_grid"
-        app:layout_constraintTop_toBottomOf="@+id/profile_nav_tabs" />
+        android:layout_height="wrap_content"/>
 
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
