--- a/app/src/main/res/layout/button_loading.xml
+++ b/app/src/main/res/layout/button_loading.xml
@@ -14,7 +14,7 @@
         android:elevation="2dp"
         android:indeterminateTint="@color/white"
         android:layout_marginTop="16dp"
-        android:visibility="visible"
+        android:visibility="gone"
         tools:visibility="visible"/>
 
 </merge>
