Implementação Fragment Manager

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,11 +8,10 @@
     android:orientation="vertical"
     tools:context=".login.view.register.view.RegisterActivity">
 
-    <androidx.fragment.app.FragmentContainerView
+    <FrameLayout
         android:id="@+id/register_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout="@layout/fragment_register_photo"
-        android:name="com.example.instagram.login.view.register.view.RegisterPhotoFragment"/>
+        tools:layout="@layout/fragment_register_email"/>
 
 </LinearLayout>
