--- a/app/src/main/res/layout/fragment_register_name_password.xml
+++ b/app/src/main/res/layout/fragment_register_name_password.xml
@@ -36,7 +36,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/registe_edit_passward_input"
+                android:id="@+id/register_edit_passward_input"
                 style="@style/Theme.Instagram.FormEditTextInput"
                 app:hintEnabled="false">
 
@@ -75,12 +75,12 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/gray_darker"
-        app:layout_constraintBottom_toTopOf="@+id/register_txt_register"
+        app:layout_constraintBottom_toTopOf="@+id/register_txt_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/register_txt_register"
+        android:id="@+id/register_txt_login"
         style="@style/Theme.Instagram.TextViewBase"
         android:layout_width="0dp"
         android:layout_marginStart="0dp"
