--- a/app/src/main/res/layout/fragment_register_welcome.xml
+++ b/app/src/main/res/layout/fragment_register_welcome.xml
@@ -22,11 +22,12 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/register_txt_welcome"
                 android:text="@string/welcome_to_instagram"
                style="@style/Theme.Instagram.TextViewBase.Form"/>
 
             <com.example.instagram.login.view.LoadingButton
-                android:id="@+id/register_name_btn_next"
+                android:id="@+id/register_btn_next"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:text="@string/next" />
