--- a/app/src/main/res/layout/button_loading.xml
+++ b/app/src/main/res/layout/button_loading.xml
@@ -13,6 +13,7 @@
         android:layout_gravity="center_horizontal"
         android:elevation="2dp"
         android:indeterminateTint="@color/white"
+        android:indeterminateTintMode="src_in"
         android:layout_marginTop="16dp"
         android:visibility="gone"
         tools:visibility="visible"/>
