--- a/app/src/main/res/layout/fragment_register_photo.xml
+++ b/app/src/main/res/layout/fragment_register_photo.xml
@@ -21,7 +21,8 @@
             android:paddingBottom="70dp"
             android:orientation="vertical">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/register_img_profile"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_gravity="center_horizontal"
@@ -42,7 +43,7 @@
                 android:layout_gravity="center_horizontal"
                 android:text="@string/photo_register_subtitle"/>
 
-            <com.example.instagram.login.view.LoadingButton
+            <com.example.instagram.login.view.common.view.LoadingButton
                 android:id="@+id/register_btn_next"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
